apps/modernization-ui/src/apps/page-builder/components/QuickConditionLookup/QuickConditionLookup.scss
.header {
    display: flex;
    justify-content: space-between;
    padding: 24px;
    align-items: center;
    .close-btn {
        color: black;

        &:hover {
            color: black;
        }
    }
}

.condition-lookup-modal-body {
    padding: 24px;
    height: 720px;

    thead th {
        &:nth-of-type(1) {
            min-width: 56px;
        }
        &:nth-of-type(2) {
            min-width: 267px;
        }
        &:nth-of-type(3) {
            min-width: 103px;
        }
        &:nth-of-type(4) {
            min-width: 163px;
        }
        &:nth-of-type(5) {
            min-width: 182px;
        }
        &:nth-of-type(6) {
            width: 189px;
        }
        &:nth-of-type(7) {
            min-width: 101px;
        }
    }

    .table-data {
        padding: 8px 16px;

        label {
            background-color: blue;
        }

        .condition-name {
            color: #005ea2;
            font-size: 16px;
            font-weight: 700;
            margin-left: 26px;
            overflow: hidden;
            text-overflow: ellipsis;
            display: inline-block;
            //vertical centering
            vertical-align: middle;
        }
    }
}

.description {
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.search-container {
    border-radius: 5px;
    background: var(--base-lightest, #f0f0f0);
    display: flex;
    justify-content: flex-end;
    padding: 16px;
}

